syntax = "proto3";
option java_multiple_files = true;
package com.pad.Gateway.grpc;

service Messages {
  rpc SendMessage(SendMessageRequest) returns (GenericReply);
  rpc GetChatMessages(ChatRequest) returns (stream Message);
  rpc ChangeMessagesForChatToSeen(ChatRequest) returns (GenericReply);
}

message SendMessageRequest {
  string messageContent = 1;
  int32 fromUserId = 2;
  int32 toUserId = 3;
}

message ChatRequest {
  int32 requestUserId = 1;
  int32 chatUserId = 2;
}

message Message {
  int32 messageStatus = 1;
  int32 fromUserId = 2;
  int32 toUserId = 3;
  string date = 4;
  string messageContent = 5;
}

message GenericReply {
  string response = 1;
}